fixed hero image where theres no gaps in foot of page below hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ main {
 
 /* Form */
 #signup {
-    background-image: url("../images/adam-miller-dBaz0xhCkPY-unsplash.webp");
+    
     background-size: 100%;
     
     flex-grow: 1;
@@ -158,6 +158,7 @@ main {
     background-color: #010b1996;
     padding: 30px;
     width: 100%;
+    
 }
 
 #signup-form>h2 {
@@ -275,7 +276,7 @@ footer {
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
-        
+       
     }
 
     /* Hero */
@@ -296,7 +297,8 @@ footer {
         }
 
         #hero {
-            height: 950px;
+            min-height: 100vh;
+            height: 100%;
             width: 100%;
             position:relative;
             background: url('../images/adam-miller-dBaz0xhCkPY-unsplash.webp') no-repeat center center/cover;
